--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "chat-bar",
 	"version": "1.0.0",
 	"description": "An application to chat with people in a virtual bar. ",
-	"main": "index.js",
+	"main": "app.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "node app.js",
